--- a/dev-libs/cyrus-sasl/ChangeLog
+++ b/dev-libs/cyrus-sasl/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/cyrus-sasl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.7 2002/07/11 05:30:19 raker Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.8 2002/07/13 21:33:14 g2boojum Exp $
+
+*cyrus-sasl-2.1.5-r2 (13 Jul 2002)
+
+  13 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  fixed typo in dep
 
 *cyrus-sasl-2.1.5-r1 (10 Jul 2002)
 
