--- a/gnome-base/gnome-desktop/ChangeLog
+++ b/gnome-base/gnome-desktop/ChangeLog
@@ -1,7 +1,10 @@
 # ChangeLog for gnome-base/gnome-desktop
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.8 2002/06/28 09:12:21 spider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.9 2002/07/15 13:36:05 stroke Exp $
 
+*gnome-desktop-2.0.3 (15 Jul 2002)
+  15 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> gnome-desktop-2.0.3.ebuild :
+  New version.
 
 *gnome-desktop-2.0.2 (27 Jun 2002)
   27 Jun 2002; Spider <spider@gentoo.org> gnome-desktop-2.0.2.ebuild :
