--- a/app-admin/kebuild/ChangeLog
+++ b/app-admin/kebuild/ChangeLog
@@ -1,8 +1,13 @@
 # ChangeLog for app-admin/kebuild
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/kebuild/Attic/ChangeLog,v 1.1 2002/04/17 18:53:05 verwilst Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/kebuild/Attic/ChangeLog,v 1.2 2002/07/16 02:33:34 owen Exp $
 
 * kebuild-0.2 (1 Feb 2002)
+  
+  15 Jul 2002; Owen Stampflee <owen@gentoo.org> :
+
+  Added KEYWORDS.
+
 
   17 April 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
   
