--- a/sys-kernel/xfs-sources/ChangeLog
+++ b/sys-kernel/xfs-sources/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/xfs-sources
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/xfs-sources/Attic/ChangeLog,v 1.2 2002/07/08 13:47:25 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/xfs-sources/Attic/ChangeLog,v 1.3 2002/07/16 04:51:20 gerk Exp $
+
+  15 Jul 2002; Mark Guertin <gerk@gentoo.org>
+  Added arch keywords (-ppc -sparc -sparc64)
 
   29 apr 2002; William McArthur <sandymac@gentoo.org> xfs-sources-2.4.18.ebuild:
 
