--- a/net-analyzer/traceroute/ChangeLog
+++ b/net-analyzer/traceroute/ChangeLog
@@ -1,11 +1,15 @@
 # ChangeLog for net-analyzer/traceroute
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/traceroute/ChangeLog,v 1.1 2002/06/28 11:54:12 bangert Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/traceroute/ChangeLog,v 1.2 2002/07/18 14:45:49 nitro Exp $
 
-  28 Jun 2002; Thilo Bangert <bangert@gentoo.org> :
-  moved to net-analyzer - added SLOT - added LICENSE
 
 *traceroute-1.4_p12 (1 Feb 2002)
+  
+  18 Jul 2002; Kyle Manna <nitro@gentoo.org> traceroute-1.4_p12.ebuild :
+  Added KEYWORDS.
+ 
+  28 Jun 2002; Thilo Bangert <bangert@gentoo.org> :
+  moved to net-analyzer - added SLOT - added LICENSE
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
