--- a/sys-apps/noflushd/ChangeLog
+++ b/sys-apps/noflushd/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for sys-apps/noflushd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/noflushd/Attic/ChangeLog,v 1.3 2002/07/15 01:31:46 blizzy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/noflushd/Attic/ChangeLog,v 1.4 2002/07/21 20:28:58 gerk Exp $
 
 *noflushd-2.6.3 (15 Jul 2002)
+
+  21 Jul 2002; Mark Guertin <gerk@gentoo.org>:
+  updated keywords (-ppc)
 
   15 Jul 2002; Maik Schreiber <blizzy@gentoo.org> :
 
