--- a/app-i18n/canna/ChangeLog
+++ b/app-i18n/canna/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/canna/ChangeLog,v 1.2 2002/07/01 15:19:14 stubear Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/canna/ChangeLog,v 1.3 2002/07/22 13:33:57 stubear Exp $
+
+*cana-3.5_beta2_r2 (22 Jul 2002)
+
+  22 Jul 2002; Stuart Bouyer <stubear@gentoo.org> canna-3.5_beta-r2.ebuild:
+
+  Removed A= to bring ebuild in line with QA policy.
 
 *canna-3.5_beta-r2 (01 Jul 2002)
 
