--- a/dev-php/php/ChangeLog
+++ b/dev-php/php/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/php
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/php/Attic/ChangeLog,v 1.5 2002/07/18 22:48:48 rphillips Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/php/Attic/ChangeLog,v 1.6 2002/07/22 15:13:36 aliz Exp $
+
+*php-4.2.2 (22 Jul 2002)
+
+  22 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> php-4.2.2.ebuild
+
+  Security update, no other changes.
 
 *php-4.2.1-r3 (12 Jul 2002)
 
