--- a/app-office/gnofin/ChangeLog
+++ b/app-office/gnofin/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for app-office/gnofin
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/gnofin/Attic/ChangeLog,v 1.1 2002/02/01 21:53:09 gbevin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/gnofin/Attic/ChangeLog,v 1.2 2002/07/25 19:29:33 aliz Exp $
 
 *gnofin-0.8.4 (1 Feb 2002)
+
+  25 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> gnofin-0.8.4.ebuild :
+  Added LICENSE, KEYWORDS, SLOT.
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
