--- a/app-text/acroread/ChangeLog
+++ b/app-text/acroread/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-text/acroread
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/acroread/ChangeLog,v 1.10 2002/07/12 17:04:52 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/acroread/ChangeLog,v 1.11 2002/07/26 02:43:36 seemant Exp $
+
+*acroread-5.06 (25 Jul 2002)
+
+  25 Jul 2002; Seemant Kulleen <seemant@gentoo.org> acroread-5.06.ebuild
+  files/digest-acroread-5.06 :
+
+  Version bump which sorts the security vulnerability.  Thanks to:
+  marko@seul.org (Marko Mikulicic) in bug #5571 for the update.
 
 *acroread-5.05-r6 (12 Jul 2002)
 
