--- a/media-gfx/showimg/ChangeLog
+++ b/media-gfx/showimg/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-gfx/showimg
-# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/showimg/Attic/ChangeLog,v 1.1 2002/07/18 22:57:53 drobbins Exp $
+# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/showimg/Attic/ChangeLog,v 1.2 2002/07/27 19:46:03 danarmak Exp $
+
+*showimg-0.7-r1 (27 Jul 2002)
+
+  27 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  New revision that adds a gcc3 fix and a missing dep on kdebase, thus fixing
+  bug #4094.
 
 *showimg-0.7 (18 Jul 2002)
 
