--- a/app-shells/scsh/ChangeLog
+++ b/app-shells/scsh/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for app-shells/scsh
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/scsh/ChangeLog,v 1.3 2002/07/12 16:25:48 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/scsh/ChangeLog,v 1.4 2002/07/29 02:36:13 cselkirk Exp $
 
 *scsh-0.6.1-r1 (12 Jul 2002)
+
+  28 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> scsh-0.6.1-r1 :
+
+  Added ppc to KEYWORDS.
 
   12 Jul 2002; Seemant Kulleen <seemant@gentoo.org> scsh-0.6.1-r1 :
 
