--- a/net-news/newspost/ChangeLog
+++ b/net-news/newspost/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-news/newspost
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/newspost/Attic/ChangeLog,v 1.1 2002/07/28 22:04:05 danarmak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/newspost/Attic/ChangeLog,v 1.2 2002/07/29 08:19:15 danarmak Exp $
+
+*newspost-2.0 (29 Jul 2002)
+
+  29 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  New version with many important changes.
 
 *newspost-1.20 (29 Jul 2002)
 
