--- a/media-libs/smpeg/ChangeLog
+++ b/media-libs/smpeg/ChangeLog
@@ -1,12 +1,15 @@
 # ChangeLog for media-libs/smpeg
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/smpeg/ChangeLog,v 1.3 2002/04/06 08:31:16 azarah Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/smpeg/ChangeLog,v 1.4 2002/08/03 05:03:42 gerk Exp $
 
   5 Apr 2002; M.Schlemmer <azarah@gentoo.org> smpeg-0.4.4-r2.ebuild :
 
   gcc-3 fixes by PreZ.
 
 *smpeg-0.4.4-r2 (3 Feb 2002)
+
+  02 Aug 2002; mark Guertin <gerk@gentoo.org> smpeg-0.4.4-r2.ebuild :
+  Added ppc to keywords
 
   3 Feb 2002; M.Schlemmer <azarah@gentoo.org> smpeg-0.4.4-r2.ebuild :
 
