--- a/app-office/ical/ChangeLog
+++ b/app-office/ical/ChangeLog
@@ -1,8 +1,10 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/ical/ChangeLog,v 1.1 2002/08/01 03:14:35 chadh Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/ical/ChangeLog,v 1.2 2002/08/03 17:49:48 chadh Exp $
 
 *ical-2.2.1 (31 Jul 2002)
+  03 Aug 2002; Chad Huneycutt <chadh@gentoo.org> ical-2.2.1.ebuild: added die
+  clause to patch commands to catch errors.
 
   31 Jul 2002; Chad Huneycutt <chadh@gentoo.org> ical-2.2.1.ebuild: Initial
   import. Most of the patches to get this to compile were taken from the srpm
