--- a/gnome-base/gnome-session/ChangeLog
+++ b/gnome-base/gnome-session/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for gnome-base/gnome-session
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-session/ChangeLog,v 1.10 2002/07/17 20:51:37 spider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-session/ChangeLog,v 1.11 2002/08/05 18:30:34 spider Exp $
+
+
+**gnome-session-2.0.4 (05 Aug 2002)
+  05 Aug 2002; Spider <spider@gentoo.org> gnome-session-2.0.4.ebuild
+  updated version (latest released) and now depends on higher version on glib and gtk+ to avoid libtool problems
+    
+
 
 gnome-session-2.0.2-r1 (17 Jul 2002) 
   17 Jul 2002; Spider <spider@gentoo.org> gnome-session-2.0.2-r1.ebuild:
