--- a/dev-libs/libxml/ChangeLog
+++ b/dev-libs/libxml/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for dev-libs/libxml
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libxml/Attic/ChangeLog,v 1.3 2002/03/25 17:55:45 azarah Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libxml/Attic/ChangeLog,v 1.4 2002/08/06 03:54:19 gerk Exp $
 
 *libxml-1.8.17-r2 (25 March 2002)
+
+  06 Aug 2002; Mark Guertin <gerk@gentoo.org> : 
+  Added ppc to keywords
 
   25 March 2002; M.Schlemmer <azarah@gentoo.org> :
 
