--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/control-center/Attic/ChangeLog,v 1.11 2002/07/19 13:37:00 spider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/control-center/Attic/ChangeLog,v 1.12 2002/08/07 00:10:59 spider Exp $
 
+*control-center-2.0.1  (07 Aug 2002)
+  07 Aug 2002; Spider <spider@gentoo.org> control-center-2.0.1.ebuild :
+  new version and dep changes
 
+  
   19 Jul 2002 ; Spider <spider@gentoo.org>
   KEYWORDS ppc and mirror://
 
