--- a/gnome-base/gnome-desktop/ChangeLog
+++ b/gnome-base/gnome-desktop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-desktop
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.10 2002/08/05 18:26:04 spider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.11 2002/08/08 08:24:08 stroke Exp $
+
+*gnome-desktop-2.0.6 (08 Aug 2002)
+  08 Aug 2002; Gabriele Giorgetti <stroke@gentoo.org> gnome-desktop-2.0.6.ebuild :
+  New version.
 
 *gnome-desktop-2.0.5 (05 Aug 2002)
   05 Aug 2002; Spider <spider@gentoo.org> gnome-desktop-2.0.5.ebuild
