--- a/gnome-base/gnome-session/ChangeLog
+++ b/gnome-base/gnome-session/ChangeLog
@@ -1,7 +1,10 @@
 # ChangeLog for gnome-base/gnome-session
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-session/ChangeLog,v 1.11 2002/08/05 18:30:34 spider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-session/ChangeLog,v 1.12 2002/08/08 08:27:38 stroke Exp $
 
+*gnome-session-2.0.5 (08 Aug 2002)
+  08 Aug 2002; Gabriele Giorgetti <stroke@gentoo.org> gnome-session-2.0.5.ebuild :
+  New version.
 
 **gnome-session-2.0.4 (05 Aug 2002)
   05 Aug 2002; Spider <spider@gentoo.org> gnome-session-2.0.4.ebuild
