--- a/net-dns/bind/ChangeLog
+++ b/net-dns/bind/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for net-dns/bind
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/bind/ChangeLog,v 1.5 2002/08/06 14:33:29 nitro Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/bind/ChangeLog,v 1.6 2002/08/08 15:57:54 nitro Exp $
 
 *bind-9.2.1-r2 (5 Aug 2002)
+
+  8 Aug 2002; Kyle Manna <nitro@gentoo.org> bind-9.2.1-r2.ebuild:
+
+  Minor changes yesterday and today.  Hopefully we can unmask soon.
 
   6 Aug 2002; Kyle Manna <nitro@gentoo.org> bind-9.2.1-r2.ebuild:
 
