--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.3 2002/08/03 02:47:15 christoph Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.4 2002/08/12 06:12:06 jmorgan Exp $
+
+*vanilla-sources-2.4.18 (12 Aug 2002)
+  12 Aug 2002; Jack Morgan <jmorgan@gentoo.org>
+  Added arch keywords (sparc64)
 
 *vanilla-sources-2.4.19 (02 Aug 2002)
 
