--- a/kde-base/kde-env/ChangeLog
+++ b/kde-base/kde-env/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kde-env
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kde-env/ChangeLog,v 1.3 2002/08/12 19:41:35 danarmak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kde-env/ChangeLog,v 1.5 2002/08/19 09:36:04 danarmak Exp $
+
+*kde-env-3-r1 (13 Aug 2002)
+
+  13 Aug 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  Make the env.d file item 99, because it needs to be last in the KDEDIRS list.
 
 *kde-env-1 (12 Aug 2002)
 
