--- a/x11-themes/qinx/ChangeLog
+++ b/x11-themes/qinx/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/qinx
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/qinx/Attic/ChangeLog,v 1.1 2002/08/13 17:12:14 danarmak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/qinx/Attic/ChangeLog,v 1.2 2002/08/13 21:19:53 danarmak Exp $
+
+  14 Aug 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  Change LICENSE to as-is.
 
 *qinx-0.2 (13 Aug 2002)
 
