--- a/app-cdr/cdlabelgen/ChangeLog
+++ b/app-cdr/cdlabelgen/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for app-cdr/cdlabelgen
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/cdlabelgen/ChangeLog,v 1.1 2002/07/21 17:49:08 blizzy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/cdlabelgen/ChangeLog,v 1.2 2002/08/14 09:29:26 pvdabeel Exp $
 
 *cdlabelgen-2.3.0 (21 Jul 2002)
+
+  14 Aug 2002; Pieter Van den Abeele <pvdabeel@gentoo.org> :
+
+  Added ppc keyword
 
   21 Jul 2002; Maik Schreiber <blizzy@gentoo.org> :
 
