--- a/gnome-base/gnome-core/ChangeLog
+++ b/gnome-base/gnome-core/ChangeLog
@@ -1,9 +1,12 @@
 # ChangeLog for gnome-base/gnome-core
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-core/Attic/ChangeLog,v 1.11 2002/06/30 17:52:05 azarah Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-core/Attic/ChangeLog,v 1.12 2002/08/14 11:58:54 pvdabeel Exp $
 
 *gnome-core-1.4.1 (30 Apr 2002)
-  
+
+  13 Aug 2002; Pieter Van den Abeele <pvdabeel@gentoo.org> :
+  Added ppc keyword
+
   30 Jun 2002; M.Schlemmer <azarah@gentoo.org> :
   Version update.
 
