--- a/media-video/vlc/ChangeLog
+++ b/media-video/vlc/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for media-video/vlc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.11 2002/08/14 06:56:00 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.12 2002/08/15 14:44:25 gerk Exp $
 
 *vlc-0.4.4 (13 Aug 2002)
+
+  15 Aug 2002; Mark Guertin <gerk@gentoo.org> vlc-0.4.4.ebuild :
+  Added ppc to keywords
 
   13 Aug 2002; Seemant Kulleen <seemant@gentoo.org> vlc-0.4.4.ebuild :
 
