--- a/net-p2p/dc-gui/ChangeLog
+++ b/net-p2p/dc-gui/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-p2p/dc-gui
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/dc-gui/Attic/ChangeLog,v 1.5 2002/07/26 05:06:35 gerk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/dc-gui/Attic/ChangeLog,v 1.6 2002/08/16 13:49:21 seemant Exp $
+
+*dc-gui-0.59 (16 Aug 2002)
+
+  16 Aug 2002; Seemant Kulleen <seemant@gentoo.org> dc-gui-0.59.ebuild :
+
+  Version bump, thanks to: ewaling@ccitt5.net (Erik Waling) in bug #6294
 
 *dc-gui-0.58 (5 Jul 2002)
 
