--- a/app-crypt/gringotts/ChangeLog
+++ b/app-crypt/gringotts/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/gringotts
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/gringotts/ChangeLog,v 1.4 2002/08/16 16:18:20 stroke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/gringotts/ChangeLog,v 1.5 2002/08/20 18:57:09 stroke Exp $
+
+*gringotts-0.6.2 (20 Aug 2002)
+  20 Aug 2002; Gabriele Giorgetti <stroke@gentoo.org> ChangeLog :
+  Version bump.
 
 *gringotts-0.6.1 (16 Aug 2002)
 
