--- a/net-analyzer/nessus-plugins/ChangeLog
+++ b/net-analyzer/nessus-plugins/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/nessus-plugins
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nessus-plugins/ChangeLog,v 1.1 2002/07/26 19:58:58 raker Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nessus-plugins/ChangeLog,v 1.2 2002/08/22 14:38:12 raker Exp $
+
+*nessus-plugins-1.2.4 (22 Aug 2002)
+
+  22 Aug 2002; Nick Hadaway <raker@gentoo.org>
+  nessus-plugins-1.2.4.ebuild, files/digest-nessus-plugins-1.2.4 :
+  Version bump.
 
 *nessus-plugins-1.2.3 (26 Jul 2002)
 
