--- a/app-text/aspell/ChangeLog
+++ b/app-text/aspell/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-text/aspell
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/aspell/ChangeLog,v 1.10 2002/08/23 09:51:05 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/aspell/ChangeLog,v 1.11 2002/08/23 12:51:05 seemant Exp $
+
+*aspell-0.50 (23 Aug 2002)
+
+  23 Aug 2002; Seemant Kulleen <seemant@gentoo.org> aspell-0.50.ebuild
+  files/digest-aspell-0.50 :
+
+  Version bump to stable release.
 
 *aspell-0.50_pre20020815 (16 Aug 2002)
 
