--- a/app-shells/zsh/ChangeLog
+++ b/app-shells/zsh/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-shells/zsh
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/zsh/ChangeLog,v 1.8 2002/08/19 12:46:27 phoenix Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/zsh/ChangeLog,v 1.9 2002/08/24 10:01:27 cybersystem Exp $
+
+*zsh-4.0.6 (24 Aug 2002)
+
+  24 Aug 2002; Sascha Schwabbauer <cybersystem@gentoo.org> zsh-4.0.6.ebuild :
+
+  Disabled make check because it violates the sandbox.
 
 *zsh-4.0.6 (19 Aug 2002)
 
