--- a/sys-apps/baselayout/ChangeLog
+++ b/sys-apps/baselayout/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/baselayout
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.30 2002/08/07 22:45:29 azarah Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.31 2002/08/25 19:12:55 azarah Exp $
+
+*baselayout-1.8.2.ebuild (25 Aug 2002)
+
+  25 Aug 2002; Martin Schlemmer <azarah@gentoo.org> :
+  New release, see included ChangeLog for changes.
 
 *baselayout-1.8.1.ebuild (08 Aug 2002)
 
