--- a/sys-libs/libieee1284/ChangeLog
+++ b/sys-libs/libieee1284/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-libs/libieee1284
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/libieee1284/ChangeLog,v 1.3 2002/08/04 23:03:26 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/libieee1284/ChangeLog,v 1.4 2002/08/29 11:53:08 seemant Exp $
+
+*libieee1284-0.2.1 (29 Aug 2002)
+
+  29 Aug 2002; Seemant Kulleen <seemant@gentoo.org> libieee1284-0.2.1.ebuild
+  files/digest-libieee1284-0.2.1 :
+
+  Version bump to bugfix release.
 
 *libieee1284-0.2.0 (04 Aug 2002)
 
