--- a/x11-plugins/wmcpuload/ChangeLog
+++ b/x11-plugins/wmcpuload/ChangeLog
@@ -1,8 +1,12 @@
-# ChangeLog for x11-misc/WMCPULoad
+# ChangeLog for x11-plugins/wmcpuload
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/WMCPULoad/Attic/ChangeLog,v 1.1 2002/02/01 21:53:38 gbevin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/wmcpuload/ChangeLog,v 1.1 2002/08/30 07:51:31 seemant Exp $
 
 *WMCPULoad-0.8.1 (1 Feb 2002)
+
+  30 Aug 2002; Seemant Kulleen <seemant@gentoo.org> * :
+
+  Relocated to x11-plugins, and renamed to wmcpuload from WMCPULoad
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
