--- a/net-dialup/rp-pppoe/ChangeLog
+++ b/net-dialup/rp-pppoe/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dialup/rp-pppoe
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/rp-pppoe/ChangeLog,v 1.4 2002/08/21 11:23:05 danarmak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/rp-pppoe/ChangeLog,v 1.5 2002/08/30 11:33:31 cybersystem Exp $
+
+  30 Aug 2002; Sascha Schwabbauer <cybersystem@gentoo.org> :
+ 
+  Added ppc to keywords.
 
   21 Aug 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
 
