--- a/app-sci/xephem/ChangeLog
+++ b/app-sci/xephem/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for app-sci/xephem
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/xephem/Attic/ChangeLog,v 1.3 2002/08/19 00:32:52 rphillips Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/xephem/Attic/ChangeLog,v 1.4 2002/09/02 02:08:05 rphillips Exp $
 
 *xephem-3.5.2 (31 May 2002)
 
-  18 Aug 2002; Ryan Phillips <rphillips@gentoo.rg> xephem-3.5.2.ebuild :
+  1 Sep 2002; Ryan Phillips <rphillips@gentoo.org> xephem-3.5.2.ebuild :
+
+  Fixes to the 'download later' section of the script.
+
+  18 Aug 2002; Ryan Phillips <rphillips@gentoo.org> xephem-3.5.2.ebuild :
 
   Thanks to Bret Towe for an update.
 
