--- a/gnome-base/libgnomecanvas/ChangeLog
+++ b/gnome-base/libgnomecanvas/ChangeLog
@@ -1,7 +1,10 @@
 # ChangeLog for gnome-base/libgnomecanvas
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomecanvas/ChangeLog,v 1.6 2002/08/06 23:56:16 spider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomecanvas/ChangeLog,v 1.7 2002/09/06 03:28:27 spider Exp $
 
+*libgnomecanvas-2.0.4 (06 Sep 2002)
+  06 Sep 2002 ; Spider <spider@gentoo.org> libgnomecanvas-2.0.4.ebuild :
+  new version
 
 *libgnomecanvas-2.0.2 (07 Aug 2002)
   07 Aug 2002; Spider <spider@gentoo.org> libgnomecanvas-2.0.2.ebuild :
