--- a/gnome-base/gdm/ChangeLog
+++ b/gnome-base/gdm/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gdm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.17 2002/08/31 16:01:43 spider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.18 2002/09/06 03:30:42 spider Exp $
+
+
+*gdm-2.4.0.11 (06 Sep 2002)
+  06 Sep 2002; Spider <spider@gentoo.org> gdm-2.4.0.11.ebuild :
+  new version
 
 *gdm-2.4.0.7 (09 Aug 2002)
   31 Aug 2002; Spider <spider@gentoo.org> gdm-2.4.0.7.ebuild :
