--- a/app-pda/plptools/ChangeLog
+++ b/app-pda/plptools/ChangeLog
@@ -1,5 +1,5 @@
 # ChangeLog for app-pda/plptools
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
 
 *plptools-0.12 (11 Jan 2004)
 
