update copyright line: Gentoo Technologies => Gentoo Foundation

--- a/app-laptop/pmud/ChangeLog
+++ b/app-laptop/pmud/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for app-laptop/pmud 
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Id: ChangeLog,v 1.2 2004/03/18 12:29:09 aliz Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Id: ChangeLog,v 1.3 2004/06/24 21:59:07 agriffis Exp $
 
 *pmud-0.10.1-r3 (04 Mar 2004)
 
