--- a/app-laptop/powerbook-tools/ChangeLog
+++ b/app-laptop/powerbook-tools/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for app-laptop/powerbook-tools
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/powerbook-tools/Attic/ChangeLog,v 1.2 2004/03/18 12:29:09 aliz Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/powerbook-tools/Attic/ChangeLog,v 1.3 2004/06/24 21:59:17 agriffis Exp $
 
   22 Jun 2003; <rac@gentoo.org> powerbook-tools-0.1.ebuild:
   emergency keyword fix
