--- a/app-laptop/spicctrl/ChangeLog
+++ b/app-laptop/spicctrl/ChangeLog
@@ -1,5 +1,5 @@
 # ChangeLog for app-laptop/spicctrl
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
 
   10 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> spicctrl-1.6.ebuild:
   don't assign default to S; tidy
